--- a/ceed7am/index.html
+++ b/ceed7am/index.html
@@ -391,7 +391,204 @@ technology, and other interested projects.</p>
 <li>Side discussions and breakout sessions will be on the meeting <a href="https://ceedam.slack.com/">Slack</a> space -- <em>Please join in advance</em>.</li>
 </ul>
 <h3 id="meeting-agenda">Meeting Agenda</h3>
-<p>The meeting activities will take place 9:00am–4:30pm <strong>Pacific</strong> time. Details to come.</p>
+<p>The meeting activities will take place 9:00am-5:00pm <strong>Pacific</strong> time. Details to come.</p>
+<h4 id="tuesday-august-2">Tuesday, August 2</h4>
+<table>
+<thead>
+<tr>
+<th>Time (PDT)</th>
+<th>Activity</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>8:00-9:00</td>
+<td><strong>Registration</strong> <br></td>
+</tr>
+<tr>
+<td>9:00-9:15</td>
+<td><strong>Opening</strong> <br> Lori Diachin (ECP Director)</td>
+</tr>
+<tr>
+<td>9:15-10:00</td>
+<td><strong>Welcome &amp; CEED Overview</strong> <br> Tzanio Kolev (LLNL)</td>
+</tr>
+<tr>
+<td>10:00-10:30</td>
+<td><strong>Coffee Break</strong> <br></td>
+</tr>
+<tr>
+<td>10:30-11:00</td>
+<td><strong>libParanumal: Update</strong> <br> Tim Warburton (VTech) <br> <em>We will describe the scope of the libParanumal project including new features targeting linear solver efficiency.</em></td>
+</tr>
+<tr>
+<td>11:00-11:30</td>
+<td><strong>Exascale: A user's perspective</strong> <br> Paul Fischer (UIUC) <br> <em>We will present user experiences on peta and exascale platforms.</em></td>
+</tr>
+<tr>
+<td>11:30-12:00</td>
+<td><strong>Finite Element Thrust &amp; MFEM Update</strong> <br> Veselin Dobrev (LLNL) <br> <em>This talk will provide a summary of the Finite Element thrust activities during the last year of the CEED project with a main focus on new developments in the MFEM software library.</em></td>
+</tr>
+<tr>
+<td>12:00-1:00</td>
+<td><strong>Lunch Break</strong></td>
+</tr>
+<tr>
+<td>1:00-1:30</td>
+<td><strong>Applications Thrust &amp; Nek Update</strong> <br> Misun Min (ANL) <br> <em>TDB</em></td>
+</tr>
+<tr>
+<td>1:30-2:00</td>
+<td><strong>Conjectures in economics for fluids and structures</strong> <br> Jed Brown (Boulder) <br> <em>Data structures and algorithms have changed the relative costs, but few production pipelines have internalized the new economics of simulation. Meanwhile, there is frequent dispute among practitioners of when to apply linearizations and assumptions on physical regime, when to use structured vs unstructured grids, and many other important design choices in a simulation tool. We reflect on the computational cost, robustness, and user interface consequences of "simplifying" this decision landscape by embracing fully nonlinear formulations with unstructured meshes.</em></td>
+</tr>
+<tr>
+<td>2:00-2:30</td>
+<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanimire Tomov + Natalie Beams (UTK) <br> <em>TDB</em></td>
+</tr>
+<tr>
+<td>2:30-3:00</td>
+<td><strong>Meshing and Mesh Adaptation of RF Simulations of Tokamak Systems</strong> <br> Mark Shephard and Cameron Smith (RPI) <br> <em>TDB</em></td>
+</tr>
+<tr>
+<td>3:00-3:30</td>
+<td><strong>Coffee Break + Group Photo</strong> <br></td>
+</tr>
+<tr>
+<td>3:30-4:00</td>
+<td><strong>How numerical simulations helped to achieve breakeven in ICF implosions on the National Ignition Facility</strong> <br> Marty Marinak (LLNL) <br> <em>The inertial confinement fusion (ICF) program relies upon detailed simulations with radiation hydrodynamic codes to design targets and to interpret the experimental results. The simulations treat as much physics from essential principles as is practical, including laser deposition, cross beam energy transfer, x-ray production and transport, NLTE kinetics, thermal transport, hydrodynamic instabilities, thermonuclear burn, and transport of reaction products. These simulations were used to optimize the target designs, making use of increased laser energy, to give them greater robustness. Preshot predictions of the first experiment that surpassed breakeven yielded thermonuclear burn conditions matched the experimental results reasonably well, with a target gain of ~1.5. We will cover the key developments in radiation hydrodynamic codes and modelling methodologies that enabled these simulations.</em></td>
+</tr>
+<tr>
+<td>4:00-4:30</td>
+<td><strong>An Exascale workflow to connect variations in additive manufacturing process-aware built microstructures to variations in part scale properties</strong> <br> Robert Carson (LLNL) <br> <em>Additively manufactured (AM) metals produce complex grain morphologies that differ drastically from grain morphologies found in traditional manufacturing techniques. In term, the mechanical response can also vary quite a bit from traditional techniques and also from other AM builds due to varying processing conditions. The ExaAM project is developing a number of high-fidelity simulation capabilities and workflows that goes from the melt pool physics all the way up to part scale response. The aim of the ExaAM project is to provide predictive simulation results that can guide the AM design process and help accelerate part qualifications. Within this study, we will examine the workflows necessary to connect process-aware built microstructures to macroscopic yield surfaces used in part scale simulations using ExaConstit. Results from this study will be examined using simulations of the NIST IN625 AMB2018-01 part build and will utilize the new exascale computer, Frontier, located at ORNL.</em></td>
+</tr>
+<tr>
+<td>4:30-5:00</td>
+<td><strong>Direct Numerical Simulation of High-Re Separated Flows with NekRS</strong> <br> Ramesh Balakrishnan (ANL) <br> <em>We present results from direct numerical simulation (DNS) of separated turbulent flow over the periodic hill geometry, the converging-diverging channel, and the Boeing Speed Bump at Reynolds number, Re_h = 37,000, Re_h = 20,580, and Re_L = 2x10^6, respectively. The incompressible Navier-Stokes equations were evolved using the high-order, spectral element code, NekRS, on Summit and Polaris. Time advancement was carried out via third-order BDF/extrapolation, with explicit treatment of the nonlinear term and independent system solves for the viscous and pressure updates. The DNS mean velocity profiles, velocity correlations, and the locations of the separation/reattachment points, compare well with the available data. This talk will also present details of the scaling and performance of NekRS for the cases considered, the preconditioning strategies, and the inflow turbulence generation for the Boeing Speed Bump case which is not periodic in the streamwise direction.</em></td>
+</tr>
+<tr>
+<td>5:00</td>
+<td><strong>Day 1 Wrap-up</strong></td>
+</tr>
+<tr>
+<td>6:00-8:00</td>
+<td><strong>Meeting Dinner</strong><br> <a href="https://www.daboccery.com/">Da Boccery</a></td>
+</tr>
+</tbody>
+</table>
+<h4 id="wednesday-august-3">Wednesday, August 3</h4>
+<table>
+<thead>
+<tr>
+<th>Time (PDT)</th>
+<th>Activity</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>8:00-9:00</td>
+<td><strong>Registration</strong> <br></td>
+</tr>
+<tr>
+<td>9:00-9:30</td>
+<td><strong>FUSE - A Face Upwinded Spectral Element Method for Conversation Laws</strong> <br> Per-Olof Persson (UC Berkley) <br> <em>The inertial confinement fusion (ICF) program relies upon detailed simulations with radiation hydrodynamic codes to design targets and to interpret the experimental results. The simulations treat as much physics from essential principles as is practical, including laser deposition, cross beam energy transfer, x-ray production and transport, NLTE kinetics, thermal transport, hydrodynamic instabilities, thermonuclear burn, and transport of reaction products. These simulations were used to optimize the target designs, making use of increased laser energy, to give them greater robustness. Preshot predictions of the first experiment that surpassed breakeven yielded thermonuclear burn conditions matched the experimental results reasonably well, with a target gain of ~1.5. We will cover the key developments in radiation hydrodynamic codes and modelling methodologies that enabled these simulations.</em></td>
+</tr>
+<tr>
+<td>9:30-10:00</td>
+<td><strong>On the Implementation of Small Dense Matrix Multiplications on Intel GPUs</strong> <br> Freddie Witherden (Texas A&amp;M) <br> <em>In this talk I will outline our experiences developing small dense matrix multiplication kernels for Intel GPUs. Particular attention will be paid to the microarchitectural differences between Intel GPUs and those from AMD and NVIDIA, particularly around the need to rely on cache in lieu of shared memory. As part of this I will describe the libysmm library which is able to obtain up to 75% of peak for single precision multiplications on consumer GPUs.</em></td>
+</tr>
+<tr>
+<td>10:00-10:30</td>
+<td><strong>Coffee Break</strong> <br></td>
+</tr>
+<tr>
+<td>10:30-11:00</td>
+<td><strong>Preparing Algebraic Multigrid Solvers in hypre for Exascale Computers</strong> <br> Rui Peng Li (LLNL) <br> <em>The emerging exascale computers provide opportunities to perform much larger scale simulations to obtain more accurate solutions than ever before. The increasing complexities of heterogeneous accelerators on such platforms have made the development of sparse linear solvers challenging to achieve high performance. In this talk, we will discuss the porting strategies, new developments and performance optimizations of the Multigrid solvers in hypre in preparation for the exascale computers with the results from real application codes.</em></td>
+</tr>
+<tr>
+<td>11:00-11:30</td>
+<td><strong>GPU-capable sparse direct solvers</strong> <br> Pieter Ghysels (LBNL) <br> <em>TBD</em></td>
+</tr>
+<tr>
+<td>11:30-12:00</td>
+<td><strong>Hybrid <em>p</em>-multigrid and low-order refined preconditioners for the high-order Poisson equation</strong> <br> Malachi Phillips (UIUC) <br> <em>The solution to the Poisson equation arising from the spectral element discretization of the incompressible Navier-Stokes equation requires robust preconditioning strategies.Low-order refined preconditioners, however, provide preconditioners with constant, bounded condition numbers.We propose a hybrid <em>p</em>-multigrid and low-order refined preconditioner that improve the time-to-solution by as much as 86% compared to the low-order preconditioner. We demonstrate the effectiveness of this approach on a variety of problems arising from the spectral element discretization of the incompressible Navier-Stokes equations on GPU architectures spanning to P &gt; 1024 NVIDIA V100 GPUs on Summit.</em></td>
+</tr>
+<tr>
+<td>12:00-1:00</td>
+<td><strong>Lunch Break</strong></td>
+</tr>
+<tr>
+<td>1:00-3:00</td>
+<td><strong>Technical Discussions</strong> <br> <em>Breakouts + Tutorials</em></td>
+</tr>
+<tr>
+<td>3:00-3:30</td>
+<td><strong>Coffee Break</strong> <br></td>
+</tr>
+<tr>
+<td>3:30-4:00</td>
+<td><strong>TBD</strong> <br> Will Pazner (Portland State) <br> <em>TBD</em></td>
+</tr>
+<tr>
+<td>4:00-4:30</td>
+<td><strong>Recent Development in PETSc GPU Support</strong> <br> Jacob Faibussowitsch and Junchao Zhang (ANL) <br> <em>We will talk new features we recently added in PETSc to better support GPUs.</em></td>
+</tr>
+<tr>
+<td>4:30-5:00</td>
+<td><strong>Multiplicative Smoothers for Multi-Level Solvers: the quadratic eigenvalue problem for ORAS</strong> <br> Stephen Thomas (AMD) <br> <em>We have re-formulated the Gram-Schmidt and GMRES algorithms -- thereby greatly enhancing the strong scaling properties - and we extended and proved new backward error results - by introducing the IGS-GMRES variant and now MGS-CGS GMRES. Based on these ideas we have introduced composite smoothers (L1-Jacobi +Gauss-Seidel) for algebraic multigrid and optimized Schwarz - which lead to 3x faster solve times on GPU architectures . The Gershgorin circle theorem shows how these improve with the problem size. With Erika Strakova in Ostrava - we are finally making progress on optimized RAS by extending the work of St-Cyr, Gander and Thomas (2007) to irregular domains, and this channels Barry Smith et al (1996), by applying variational techniques to the FEM boundary conditions in integral form and solves the quadratic eigenvalue problem for the optimal transmission conditions. Numerical experiments confirm the decrease in the number of GMRES iterations.</em></td>
+</tr>
+<tr>
+<td>5:00</td>
+<td><strong>Day 2 Wrap-up</strong></td>
+</tr>
+</tbody>
+</table>
+<h4 id="thursday-august-4">Thursday, August 4</h4>
+<table>
+<thead>
+<tr>
+<th>Time (PDT)</th>
+<th>Activity</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>8:30-9:00</td>
+<td><strong>Registration</strong> <br></td>
+</tr>
+<tr>
+<td>9:00-9:30</td>
+<td><strong>El Capitan Update</strong> <br> David Richards (LLNL) <br> <em>Preparations for El Capitan are accelerating as the delivery date approaches.  This talk will review the status of El Capitan preparations including the hardware and system software as well as application readiness.</em></td>
+</tr>
+<tr>
+<td>9:30-10:00</td>
+<td><strong>TBD</strong> <br> TBD</td>
+</tr>
+<tr>
+<td>10:00-10:30</td>
+<td><strong>Coffee Break</strong> <br></td>
+</tr>
+<tr>
+<td>10:30-11:00</td>
+<td><strong>TBD</strong> <br> Kenneth Weiss (LLNL)</td>
+</tr>
+<tr>
+<td>11:00-11:30</td>
+<td><strong>Visualization of novel and higher-order discretizations using VTK and ParaView</strong> <br> David Thompson and Corey Wetterer-Nelson (Kitware) <br> <em>Many visualization tools, including VTK and ParaView, have adopted data models that focused on discretizations in common use years ago. Advances in large-scale solvers have fueled a new class of discretizations that make different assumptions than prior data models. This makes accurate visualization a difficult exercise, requiring significantly more memory to faithfully represent new discretizations in the original data model. Recently, Sandia National Laboratories (SNL) and the Army Engineering Research and Development Center (ERDC) have funded efforts to modernize the data model in VTK and, by extension, ParaView. We will discuss and demonstrate these.</em></td>
+</tr>
+<tr>
+<td>11:30-12:00</td>
+<td><strong>Performant Low-order Matrix-free Finite Element Kernels on GPU Architectures</strong> <br> Yohann Dudouit (LLNL) <br> <em>Numerical methods such as the Finite Element Method (FEM) have been successfully adapted to utilize the computational power of GPU accelerators. However, much of the effort around applying FEM to GPUs has been focused on high-order FEM due to higher arithmetic intensity and order of accuracy. For applications such as the simulation of geologic reservoirs, high levels of heterogeneity results in high resolution grids characterized by highly discontinuous (cell-wise) material property fields, and low-order methods are typically employed. In this study, we present a strategy for implementing highly performant low-order matrix-free FEM operator kernels in the context of the conjugate gradient (CG) method. Performance results of matrix-free Laplace and isotropic elasticity operator kernels are presented and are shown to compare favorably to matrix-based SpMV operators on V100, A100, and MI250X GPUs.</em></td>
+</tr>
+<tr>
+<td>12:00</td>
+<td><strong>Meeting Wrap-up</strong></td>
+</tr>
+<tr>
+<td>12:00-5:00</td>
+<td><strong>Additional meetings and discussions</strong></td>
+</tr>
+</tbody>
+</table>
 <p>See also the agendas of the previous CEED annual meetings:
 <a href="https://ceed.exascaleproject.org/ceed6am/">2022</a>,
 <a href="https://ceed.exascaleproject.org/ceed5am/">2021</a>,
@@ -413,7 +610,7 @@ technology, and other interested projects.</p>
 <h3 id="lodging-options">Lodging Options</h3>
 <p>There are many hotels in Livermore, and others are available in Pleasanton and nearby cities. See LLNL's <a href="https://www.llnl.gov/sites/www/files/hotel_listing.pdf">recommended list of area hotels</a> or this <a href="https://www.google.com/maps/search/hotels+near+lawrence+livermore+national+laboratory/@37.6880708,-121.7794089,12z/data=!3m1!4b1">Google Maps search</a>. <em>If you stay outside of Livermore, we recommend staying west of the city to have a reverse commute to the Lab.</em></p>
 <h3 id="about-livermore-and-llnl">About Livermore and LLNL</h3>
-<p>Founded in 1869, Livermore is California’s oldest wine region, framed by award-winning wineries, farmlands, and ranches that mirror the valley’s western heritage. As home to renowned science and technology centers, Lawrence Livermore and Sandia national labs, Livermore is a technological hub and an academically engaged community. It has become an integral part of the Bay Area, successfully competing in the global market powered by its wealth of research, technology, and innovation.</p>
+<p>Founded in 1869, Livermore is California's oldest wine region, framed by award-winning wineries, farmlands, and ranches that mirror the valley's western heritage. As home to renowned science and technology centers, Lawrence Livermore and Sandia national labs, Livermore is a technological hub and an academically engaged community. It has become an integral part of the Bay Area, successfully competing in the global market powered by its wealth of research, technology, and innovation.</p>
 <p>For more than 70 years, LLNL has applied science and technology to make the world a safer place. World-class facilities include the National Ignition Facility, the Advanced Manufacturing Laboratory, and the Livermore Computing Center hosting the Sierra supercomputer and home of the future exascale machine, El Capitan.</p>
 <h3 id="questions">Questions?</h3>
 <p>For questions, please contact the meeting organizers at
